# minitrain

./: .gitignore  Dockerfile  README.md  docker-compose.yml
android-app/: build.gradle.kts  settings.gradle.kts
android-app/app/: build.gradle.kts  consumer-rules.pro
android-app/app/src/androidTest/java/com/minitrain/: SecureWebSocketIntegrationTest.kt
android-app/app/src/androidTest/java/com/minitrain/app/: MainActivityTest.kt  VideoStreamClientInstrumentedTest.kt
android-app/app/src/androidTest/java/com/minitrain/app/ui/: ScreenshotTestRule.kt  TrainControlScreenTest.kt  TrainSelectionScreenTest.kt
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/minitrain/app/: MainActivity.kt
android-app/app/src/main/java/com/minitrain/app/network/: VideoStreamClient.kt
android-app/app/src/main/java/com/minitrain/network/: KeystoreMtlsCredentialStore.kt  MtlsCredentialStore.kt  OAuth2MtlsTokenProvider.kt  SecureWebSocketClientFactory.kt
android-app/app/src/main/java/com/minitrain/security/: SecureTokenStorage.kt
android-app/app/src/main/kotlin/com/minitrain/app/model/: TrainModels.kt
android-app/app/src/main/kotlin/com/minitrain/app/network/: CommandChannelClient.kt  CommandEncoder.kt  CommandFrames.kt
android-app/app/src/main/kotlin/com/minitrain/app/repository/: TrainDirectoryRepository.kt  TrainRepository.kt
android-app/app/src/main/kotlin/com/minitrain/app/ui/: TrainControlScreen.kt  TrainSelectionScreen.kt  TrainSelectionViewModel.kt  TrainViewModel.kt
android-app/app/src/test/kotlin/com/minitrain/app/: CommandEncoderTest.kt  JvmToolchainTest.kt  TelemetryParserTest.kt  TrainRepositoryTest.kt  TrainViewModelTest.kt
android-app/app/src/test/kotlin/com/minitrain/app/network/: CommandChannelClientTest.kt  CommandFramesTest.kt
android-app/app/src/test/kotlin/com/minitrain/app/ui/: TrainSelectionViewModelTest.kt
docs/: MANUEL.md  deployment-guide.md  security-provisioning.md
docs/guides/: android-build.md  firmware-esp32.md  migration-plan.md  temps-reel.md
docs/specs/: android.md  firmware-esp32.md  interface-temps-reel.md
firmware/: CMakeLists.txt
firmware/include/minitrain/: camera_streamer.hpp  command_channel.hpp  command_processor.hpp  esp_target_check.hpp  light_controller.hpp  pid_controller.hpp  secure_websocket_client.hpp  telemetry.hpp  train_controller.hpp  train_state.hpp
firmware/main/: main.cpp  secure_websocket_client.cpp  tls_credentials.cpp  tls_credentials.hpp
firmware/src/: camera_streamer.cpp  command_channel.cpp  command_processor.cpp  light_controller.cpp  pid_controller.cpp  telemetry.cpp  train_controller.cpp  train_state.cpp
firmware/tests/: test_command_channel.cpp  test_command_processor.cpp  test_main.cpp  test_pid_controller.cpp  test_suite.hpp  test_telemetry.cpp  test_train_controller.cpp
scripts/provisioning/: generate-fw-credentials.sh  package-android-pkcs12.sh
(+1 files in other folders)
